# toydb

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  REVIEW_AND_FIX_REPORT.md
examples/: index_demo.sql  library.sql  movies.sql  orders.sql  txn.sql
src/: error.rs  format.rs  lib.rs
src/catalog/: mod.rs  table.rs
src/engine/: disk.rs  index.rs  memory.rs  mod.rs
src/executor/: aggregate.rs  expr.rs  mod.rs  plan.rs  result.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs
src/storage/: encoding.rs  mod.rs  page.rs  pager.rs  wal.rs
src/txn/: mod.rs
src/types/: mod.rs  row.rs  value.rs
tests/: sql_basic.rs  sql_cli.rs  sql_comprehensive.rs  sql_index.rs  sql_persistence.rs  sql_stress.rs  sql_transaction.rs
